--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -758,6 +758,10 @@ donate donated 100000 for cancer reserch
 
 ward the ward is busy
 
+thresh the chain warden.
+
+
+
 rarely  rarely spend time
 
 constituent the support of my constituents
@@ -1467,6 +1471,90 @@ scatter scattered on the floor
 quiver
 
 perspiration wipe the perspiration
+
+#### 星火
+
+conservation
+
+concede
+
+conceal
+
+cabinet
+
+bloodshed
+
+authentic
+
+asset
+
+arbitrary
+
+advocate
+
+affection
+
+violent
+
+speculate
+
+scrape
+
+reveal
+
+remedy
+
+relevent
+
+peer
+
+opposition
+
+opponent
+
+omit
+
+middle-class
+
+intensive
+
+instinct
+
+explicit
+
+fluctuate
+
+deficit
+
+coarse
+
+candidate
+
+accumulate
+
+succesive
+
+reservation
+
+obligation
+
+oblige
+
+property
+
+recession
+
+shrink
+
+reserve
+
+reservation
+
+modesty
+
+moralty
+
+impulse
 
 
 
