--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -1056,7 +1056,7 @@ claim she claims to have uncovered how people achieve success
 
 #### 翻译
 
-### 第三天11.20
+### 第三天11.19
 
 #### 复习
 
@@ -1554,24 +1554,438 @@ modesty
 
 moralty
 
-impulse
+impulse Unable to resist the impulse, he glanced at the sea again.
 
 
 
-### 第四天 
+### 第四天 11.20
 
-### 第五天11.22
+#### 复习
+
+stark
+
+comparison
+
+provision
+
+conference
+
+proposion
+
+ecology
+
+militant
+
+permissible
+
+subsequent subsequent events
+
+emerge
+
+imply
+
+molten
+
+holder
+
+proclaim
+
+prosecute
+
+drastically
+
+shifting
+
+sensation
+
+conserve
+
+devastating
+
+facilitate
+
+intrinsic
+
+reciprocal
+
+custom
+
+customary
+
+discrepancy
+
+benign
+
+guardian
+
+suspicion
+
+elite
+
+trivial
+
+revolve
+
+reside
+
+doctrine
+
+periodic
+
+sophisticated
+
+tribe
+
+redundant redundant words
+
+phenomenon
+
+donate
+
+soluble
+
+intricate
+
+remnant  the remnant of last night's meal
+
+nominal the nominal head of our college
+
+obsessuin
+
+infinitely
+
+primarily
+
+equator
+
+patriotic patriotic action
+
+perspiration
+
+preserve preserve the peace
+
+innovative
+
+consensus
+
+sensible sensible sort of person
+
+resultant resultant loss of life
+
+radius
+
+composition your composition contains too many mistakes
+
+reel fising reel
+
+sentiment growing sentiment fir military action
+
+tile tile walls and floors
+
+decree ruled by decree
+
+revel reveled in his success
+
+defiance defiance against the government
+
+metallic voice sounded harsh and metallic
+
+hysterical hysterical screaming
+
+conscientious 
+
+transport transport policy
+
+shatter shatter into pieces
+
+moan moaning about the bad weather
+
+psychological psychological well-being
+
+commission commission a statue of his wife
+
+obsene
+
+obcession
+
+inherent
+
+inherit
+
+reherse
+
+perish perished in the hotel fire last night
+
+gaze gazing out of the window
+
+suspension
+
+manure nitrogen comes from manure
+
+mistress be mistress of her own affairs
+
+flatter feel flattered at being asked to give a lecture
+
+racket awful racket
+
+composite composite of information
+
+banquet grand banquet
+
+stock a large stock of toys on sale
+
+devotion
+
+#### 扇贝
+
+warrant no detail was too small to warrant his attention.warrent extra protein
+
+brood a large brood of children
+
+informed
+
+notify notify us of any change
+
+outfit a blue wedding outfit
+
+deprive being deprived if the thing-perspective
+
+tangle a mass of tangles
+
+tentative tentative arrangement to meet on Friday
+
+stall the car stalled
+
+clarity any law to be made requires clarities
+
+poultry raise poultry on the farm 
+
+intercourse social intercourse among people of different classes
+
+condemnation  received universal condemnation
+
+cripple are crippled by wars
+
+ceramic ceramic tiles
+
+dim the light is dim
+
+modest modest improvements/reforms
+
+oxide iron oxide
+
+pamphlet the pamphlet contains information of political opinion
+
+preside preside at the ceremony
+
+deduce deduce shocking fact from subtle evidence
+
+excursion  make an excursion to the sea side 
+
+limb don't attempt to move the limb
+
+probe he probed the mud with a stick
+
+marshal the country marshalled its economy and political resources 
+
+degenerate the demonstration degenerated into violence 
+
+contrive contrive a family reunion after the civil war
+
+intervention repeated interventions have failed to regulate prices
+
+relative the position of the sun relative to the earth
+
+execution failed in execution
+
+foster fostered over 60 children
+
+spectrum red and violet are at opposite ends of the spectrum
+
+fusion a fusion of several styles
+
+corpse found the corpse
+
+detect detect small amounts of radiation.  it is text that enables us to detect abuses of logic and common sense
+
+transition Adolescence is the period of transition between childhood and adulthood
+
+cemetery buried in the cemetery on the hill
+
+segregate smokers and non-smokers are segregated from each other in the hotel. rich and poor have segregated (区分这两个分开，一个是物理的，一个是抽象的)
+
+compound Organic compounds
+
+coverage TV coverage .expand Medicare coverage of telemedicine
+
+smash smashed into pieces
+
+correspondence  he has access to all her correspondence
+
+quest the quest for gold
+
+brittle having brittle bones and can't do intense sports
+
+pinpoint pinpoint the cause of the accident
+
+deviate he never deviate from his original plan
+
+knob turn the knob
+
+hurricane the hurricane has a speed of 73 miles per hour
+
+brew was brewed by ourselves
+
+destiny it's destiny that brings people together
+
+trademark registered trademark
+
+inflict inflicting massive injuries
+
+numerical in numerical order
+
+clamp held in position by a clamp
+
+recipient the recipient if the Nobel Prize
+
+glide gliding across the sky
+
+informed keep us informed about the situation. feel less informed about science
+
+partial partial solution
+
+shed the garden shed. shed light on life in outer space. shed the safety of her accounting job.
+
+synthesis synthesis of traditional and modern values
+
+fusion a fusion of several styles
+
+implementation the implementation of the policy
+
+distract children are easily distracted
+
+repertoire a wide repertoire of piano pieces. behavior repertoire
+
+shrimp add the shrimp and cook for 5 minutes
+
+barren the barren land
+
+eject the noisy youths were ejected
+
+limp his limp is the result of the accident
+
+hike hiked the price of milk by over 40%
+
+dolphin dolphin user their fins to change direction
+
+expedition the expedition returned two weeks later
+
+tablet take two tablets with water . tablets and laptops
+
+proceedings criminal proceedings against her 
+
+skull
+
+incorporate you suggestions have been incorporated in the new plan
+
+cholesterol lower my cholesterol level
+
+lubricate lubricate the wheels of your bicycle
+
+rim the rim of your cup
+
+tunnel drive through the tunnel
+
+rival between rival groups
+
+methedology
+
+confession he broke down and made a full confession
+
+oath under oath
+
+scrape scrape the mud off her boots
+
+reassure reassure the anxious parents
+
+peculiar peculiar ideas
+
+gravely considered gravely
+
+coincide coincide in opinion
+
+shepherd
+
+reception the reception area
+
+huddle huddled in a corner. a group of corn farmers stands huddled around an agronomist
+
+periodical insert this article into your periodical
+
+refute
+
+constrain climate constrained the growing of rice
+
+drag dragged myself out of bed
+
+overpass
+
+prospective prospective customers
+
+drastic drastic measures
+
+religious religious education
+
+prophet my prophet. your empress is here.
+
+summit Asia-Pacific Economic Cooperation summit. the summit of the mountain
+
+undermine undermine your confidence
+
+optical optical illusion
+
+migrate migrate here to there
+
+colonial colonial possessions
+
+peel peel the banana for me
+
+preach preach economy as the best means of solving the crisis.
+
+inhibit inhibit personal development
+
+distribution distribution of aid supplies
+
+transient transient population
+
+heritage preserve cultural heritage
+
+climate
+
+texture  the soft texture of silk
+
+drain drained me of all strength
+
+resistant people are usually resistant to change
+
+mild mild on the skin
+
+capacity a seating capacity of 2000
+
+
+
+### 第五天11.21
 
 ### 第六天
 
-### 第七天11.24
+### 第七天11.23
 
-### 第八天11.25
+### 第八天11.24
 
 ### 第九天
 
-### 第十天11.27
+### 第十天11.26
 
 ### 第十一天
 
-### 第十二天11.29
+### 第十二天11.28
