--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -1052,10 +1052,6 @@ compensation  she is still press her claim for compensation
 
 claim she claims to have uncovered how people achieve success
 
-#### 阅读
-
-#### 翻译
-
 ### 第三天11.19
 
 #### 复习
@@ -1846,7 +1842,7 @@ numerical in numerical order
 
 clamp held in position by a clamp
 
-recipient the recipient if the Nobel Prize
+recipient the recipient in the Nobel Prize
 
 glide gliding across the sky
 
@@ -1956,7 +1952,7 @@ inhibit inhibit personal development
 
 distribution distribution of aid supplies
 
-transient transient population
+transient transient population 暂住人口
 
 heritage preserve cultural heritage
 
@@ -1972,9 +1968,168 @@ mild mild on the skin
 
 capacity a seating capacity of 2000
 
+#### 星火
 
+wreck the wreck of the famous ship
+
+ruin 
+
+rival rival groups
+
+rack the luggage rack
+
+provision  the law makes no provision for this
+
+procession the wedding procession
+
+presentation an interesting presentation on environmental  protection
+
+pledge they pledged never to tell the secret
+
+precious  precious jewels
+
+penalty the penalty for travelling without a ticket
+
+lag  I lags behind my classmates
+
+massive a massive hole
+
+intimidate  the gang members intimidated the shopkeepers
+
+justification 
+
+feasible a feasible plan
+
+forestry  a forestry department
+
+exclusively 
+
+epidemic
+
+frontier the frontier between the land of the Saxons and that of the Danes
+
+disguise the thief disguised himself as a women and sneaked into the house
+
+delegation the delegation of our country
+
+immune immune system
+
+#### 阅读
+
+...做了的,暂时不写
 
 ### 第五天11.21
+
+#### 复习
+
+tentative tentative arrangement to meet on Friday
+modest modest improvement
+tangle a mass of tangles
+clarity any law to be made requires clarities
+tentative tentative arrangement to meet on Friday
+correspondence  he has access to all her correspondence
+inflict inflicting massive injuries
+shrimp add the shrimp and cook for 5 minutes
+dolphin dolphin user their fins to change direction
+tablet take two tablets with water . tablets and laptops
+incorporate you suggestions have been incorporated in the new plan
+oath under oath
+undermine undermine your confidence
+drain drained me of all strength
+rack the luggage rack
+wreck the wreck of the famous ship
+precious  precious jewels
+delegation the delegation of our country
+
+
+
+diminish rapidly diminish
+
+complicated too complicated to understand
+
+revel reveled in his success
+
+brood a large brood of children
+
+flatter feel flattered at being asked to give a lecture
+
+illusion illusion and reality
+
+distinct distinct from each other
+
+destiny
+
+obsession
+
+obscene 
+
+tentative tentative arrangement
+
+optical optical illusion
+
+outward outward signs of distress
+
+brittle brittle bones
+
+moral a moral life
+
+consume consume a large quantity of alcohol
+
+neglect neglect their duties
+
+rivalry
+
+sentiment growing sentiment for military action . in the sentiments expressed in the letters
+
+post post-dinner . post their lives on social media
+
+intrinsic the intrinsic value of education
+
+emergency state of emergency
+
+subsequent Subsequent events
+
+stark with a bed and a chair , looked stark
+
+banquet a grand banquet
+
+crush crush under a truck
+
+cemetery in the cemetery on the hill
+
+stall the car stalled
+
+shifting shifting sands
+
+mistress mistress of her own affairs
+
+proposition a proposition of how to study
+
+smash smashed into pieces
+
+myth
+
+poultry raise poultry on the farm
+
+intricate intricate pattern
+
+condemnation
+
+intrigue  is intrigued by the employee's creative idea
+
+prophet
+
+
+
+#### 扇贝
+
+
+
+
+
+#### 星火
+
+星火已看完，后续取消
 
 ### 第六天
 
