--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -2119,9 +2119,259 @@ intrigue  is intrigued by the employee's creative idea
 
 prophet
 
-
-
 #### 扇贝
+
+spectacle stunning spectacle
+
+exceed exceed our expections
+
+hop hop down the steps
+
+imitation talk by imitation
+
+incredible it's incredible that I can study so hardly
+
+faith I have great faith in you
+
+tug tugging her hair
+
+pendulum  the pendulum has swung back to traditional teaching methods
+
+conform conform the conventions
+
+revelation the revelation of her affair with another man
+
+intact the precious painting survived the fire intact
+
+recognize we should recognize the constrains in my own knowledge
+
+slate slates on the roof are broken
+
+predominantly the population is predominately Jewish
+
+monetary monetary policy
+
+corrode acid corrode metal
+
+cyberspace amount of information in cyberspace
+
+ramp there are ramps at supermarket exits and entrances for wheelchair users
+
+vivid vivid memories
+
+subordinate 
+
+mutter stop muttering to yourself
+
+mason work as a mason
+
+specification  exactly to our specifications
+
+ore iron ore
+
+emission reduce the emission of the carbon
+
+expose sand are exposed at low tide
+
+drill an electric drill
+
+massacre nobody survived the massacre
+
+whereby introduced a new system whereby people could vote by telephone
+
+surge unexpected surge in inlation
+
+presume the girl is presumed dead
+
+motto My motto is:"Programming and friendship is magic "
+
+cocaine addiction to cocaine
+
+extinction danger of  extinction
+
+scan
+
+tumor a malignant tumor
+
+indignant indignant complaint
+
+maneuver maneuver practice
+
+propaganda
+
+receipt I need a receipt
+
+scrap there's not a scrap of evidence to support him
+
+precise precise details
+
+wrench he grabbed Ben, wrenching him away
+
+casual a casual manner
+
+bonus be rewarded with a bonus
+
+luminous a luminous green
+
+bleed she slowly bled to death. the one  or two doctrines you don't share will bleed over into you mind and shape your thinking
+
+exposition visit the exposition this afernoon
+
+depict the novel that depict  scenes
+
+hoist he hoist the package over his shoulder
+
+mortal the mortal injury. normal mortals . a man is deliberately designed to be mortal
+
+profitable it's not profitable. more profitable
+
+crumble she crumble the fall leaves . crumbling statues
+
+domestic domestic life
+
+mission peacekeeping mission
+
+fossil a piece of fossil of an ancient bird
+
+graciously  refused him graciously
+
+quantitative no difference between the two in quantitative terms
+
+diffuse waste gases diffuse into the atmosphere
+
+salute salute to the Queen
+
+expire licence expired
+
+thermal thermal and vision sensor. thermal springs
+
+hinder hindered the athlete's recovery
+
+pertinently spoke pertinently and to the point
+
+flip flip a coin into the air
+
+critical critical thinking. a critical step in the right direction
+
+glare glare at. the glare of  the sun . in the full glare of publicity
+
+glaring a glaring example of misrepresentation. 明显的歪曲事实示例
+
+paradise her paradise
+
+safeguard safeguard their own information
+
+shrub evergreen shrub
+
+peak the mountain peak
+
+parameter some parameter can determine the taste of the wine
+
+monologue continue his monologue. keep their inner monologues
+
+staircase walk down the staircase
+
+courtesy show us every courtesy
+
+queer queer laugh
+
+intersection the busy intersection
+
+muscular tall,lean and muscular
+
+court take the matter to court
+
+elastic tie her hair with an elastic band
+
+hostility show open hostility towards their new colleagues
+
+ivory the ivory trade
+
+present present on their reserch
+
+verify verify your theory
+
+humidity temperature and humidity
+
+collaborate collaborating with the enemy
+
+disperse the crow dispersed
+
+hum the bees were humming in the yard
+
+retrieve retrieve the ball from the water
+
+solidarity show solidarity with the leader
+
+executive chairman of the executive committee
+
+suffice a phone will suffice
+
+symposium the symposium lasted two days
+
+leaflet they distribute leaflets to customers
+
+hover a full moon hovered in the sky
+
+evolution the evolution of animals
+
+generalize impossible to generalize about children's books
+
+tolerant a tolerant attitude
+
+coup win is a coup for me 
+
+bear I can't bear the thought of losing her
+
+rotary the rotary helicopter
+
+peninsula the Korean peninsula
+
+exploit my youth are being exploit
+
+coupon 30% - off coupon
+
+census  traffic census
+
+furious furious with myself
+
+quartz a great deal of quartz
+
+decent a decent job
+
+jog go jogging
+
+fragile in fragile health
+
+batter was battered to death with a hammer
+
+vice smoking is my only vice
+
+discern I discerned that the man was lying
+
+suburb she lives in a suburb
+
+fluctuate my weight fluctuated wildly
+
+handicap despite her handicap, Jane is able to hold down a job
+
+tack the carpet was tacked to the floor
+
+dub she is dubbed "the fairy"
+
+blur just a blur without my glasses
+
+vicious a vicious temper . vicious circle
+
+polar the polar opposite oh the healthy. polar bears
+
+excessive
+
+
+
+
+
+
 
 
 
