--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -2173,13 +2173,15 @@ emission reduce the emission of the carbon
 
 expose sand are exposed at low tide
 
+tide incoming high tide
+
 drill an electric drill
 
 massacre nobody survived the massacre
 
 whereby introduced a new system whereby people could vote by telephone
 
-surge unexpected surge in inlation
+surge unexpected surge in inflation
 
 presume the girl is presumed dead
 
@@ -2215,7 +2217,7 @@ luminous a luminous green
 
 bleed she slowly bled to death. the one  or two doctrines you don't share will bleed over into you mind and shape your thinking
 
-exposition visit the exposition this afernoon
+exposition visit the exposition this afternoon
 
 depict the novel that depict  scenes
 
@@ -2287,7 +2289,7 @@ hostility show open hostility towards their new colleagues
 
 ivory the ivory trade
 
-present present on their reserch
+present present on their research
 
 verify verify your theory
 
@@ -2367,19 +2369,13 @@ polar the polar opposite oh the healthy. polar bears
 
 excessive
 
-
-
-
-
-
-
-
-
-
-
 #### 星火
 
 星火已看完，后续取消
+
+#### 阅读
+
+
 
 ### 第六天
 
