--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -2355,7 +2355,7 @@ suburb she lives in a suburb
 
 fluctuate my weight fluctuated wildly
 
-handicap despite her handicap, Jane is able to hold down a job
+handicap despite her handicap,Jane is able to hold down a job
 
 tack the carpet was tacked to the floor
 
@@ -2378,6 +2378,302 @@ excessive
 
 
 ### 第六天
+
+#### 复习
+
+moral
+
+mortal
+
+modest
+
+rival and ritual
+
+court
+
+spice and  spite
+
+monologue
+
+loom
+
+sensitive 保密的,敏感的，体贴的 some mail can be extremely sensitive and timely
+
+ warfare and welfare
+
+brittle brittle bones
+
+composite
+
+bonus  and bone
+
+instrument  and instruct and implement
+
+grieve and grief and 
+
+mason 
+
+predominantly and premier and premium and preliminary
+
+undermine 
+
+cemetery and symmetry
+
+verify
+
+persuation
+
+destiny and destination
+
+graciously 
+
+throne
+
+jog 
+
+provided 
+
+wrench
+
+fossil 
+
+retrospect
+
+census and concensus
+
+humidity
+
+complement and comply
+
+vice
+
+preach
+
+tame tame the tobacco trade
+
+pertinently pertinently to the point
+
+spectator
+
+ramp 
+
+coupon dining coupon
+
+
+
+#### 扇贝
+
+neglect
+
+entrepreneur
+
+confine
+
+fulfil
+
+motive
+
+rigorous
+
+critic
+
+evoke evoke strong memories
+
+refreshment
+
+conceive and contrive
+
+justification
+
+metropolitan
+
+corps
+
+orchestra
+
+stump the old tree stump
+
+ford a ford of the river
+
+feminine
+
+pilgrim
+
+glitter
+
+terminate
+
+overwhelming
+
+climax the climax of the celebration
+
+imitative imitative of each other
+
+underprivileged
+
+outwardly
+
+clerk
+
+stylish a stylish cream suit
+
+mob  handled by the mob
+
+compliment and complement
+
+divert divert my attention
+
+repay repay the house
+
+vein a vein in his arm
+
+mingle mingled in the crowd
+
+gracious gracious to everyone
+
+bureaucracy reduce the paperwork and bureaucracy
+
+recognition received recognition for her achievements
+
+cylinder the cylinder is a crucial part of the washing machine
+
+startle the explosion startle the children
+
+erupt 
+
+bacteria bacteria infections
+
+imposing quietly spoken but imposing figure 
+
+impose He has tried to impose solutions to the country's problems by fiat
+
+referee the match will be refereed by David
+
+repel his rudeness repels everyone . They have fifty thousand troops along the border ready to repel any attack.
+
+provocative deliberately provocative
+
+chant a lot of the chant was in support of the candidate
+
+vocational vocational education 
+
+contempt veiling their contempt for you
+
+identically
+
+reference no further reference to her
+
+criterion measure by the criterion of making money
+
+dart poisoned dart
+
+bribe accept bribe
+
+glamour resist the glamour of the Internet
+
+waxy waxy face
+
+progressive a progressive coach
+
+fort
+
+chunk
+
+chapel
+
+instability
+
+dean
+
+gasp
+
+formulate
+
+cafeteria
+
+penalty
+
+designate
+
+missionary
+
+substantial
+
+hasty hasty decision
+
+clasp in a film clasp
+
+deceptive appearances can be deceptive 外表可以具有欺骗性的
+
+transfer
+
+inventory make a full inventory of the rich man's collection
+
+breach a breach of enviroment
+
+tilt
+
+hatred 
+
+foam a foam pillow
+
+prejudice
+
+patrol an enemy patrol
+
+embryo the embryo is only half a millimetre
+
+symphony  the symphony is a real masterpiece
+
+deplore  deplore the use of chemical weapons
+
+concise clear and concise
+
+vehicle motor vehicle
+
+sponge a sponge to clean the edges of the sink
+
+exclaim exclaim in shock
+
+clutch I clutched on to the chair for support
+
+slash painting were slashed
+
+compulsory a compulsory subject
+
+obscure somewhat obscure
+
+obscene
+
+stamp first-class stamp
+
+elapse three years have elapsed
+
+bull Beware of the bull
+
+barricade broke through the barricade
+
+quota imposed quota
+
+salvation the salvation of the country's economy
+
+obedient obedient to our superiors
+
+defy defy my teachers
+
+pasture the place used to pasture
+
+soar the temperature sored to 38
+
+spine injured his spine
+
+plaster the plaster on the school walls
+
+certify certified dead
+
+
+
+
 
 ### 第七天11.23
 
