--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -1,4 +1,4 @@
-六级一年前背过一遍，但一直不太自信。
+ 六级一年前背过一遍，但一直不太自信。
 
 换了一个背单词的软件-扇贝单词，期望通过暴力学习法12天把六级词汇过一遍，每天接触800个单词，其中200个新词，600个复习单词
 
@@ -2485,9 +2485,9 @@ conceive and contrive
 
 justification
 
-metropolitan
+metropolitan Two years ago, he signed over his art collection to the New York Metropolitan Museum of Art. 
 
-corps
+corps The Marine Corps experience launched my machinist career. It also made me realize that learning how-to-learn is a powerful tool
 
 orchestra
 
@@ -2609,7 +2609,7 @@ transfer
 
 inventory make a full inventory of the rich man's collection
 
-breach a breach of enviroment
+breach  a breach of enviroment
 
 tilt
 
@@ -2671,11 +2671,173 @@ plaster the plaster on the school walls
 
 certify certified dead
 
-
-
-
-
 ### 第七天11.23
+
+#### 复习
+
+reciprocal
+
+presume
+
+prescription
+
+ford
+
+critic
+
+relieve
+
+proke more emotionally provoking. provoke discussion
+
+courtesy
+
+disconnect a huge disconnect between the way we currently train scientists and the actual employment opportunities available for them
+
+commision
+
+supple
+
+gasp
+
+clutch
+
+clasp
+
+wrentch
+
+breach
+
+critical
+
+designate
+
+compliment
+
+partition
+
+confine
+
+decent and 
+
+emission and commission
+
+tutor and tumor
+
+conform and transform
+
+reside and  preside
+
+vicious and vigorous
+
+hatred n.
+
+succeed v.
+
+complement and implement 
+
+complement and compliment and compartment
+
+intersection
+
+slate
+
+imposing and impose
+
+defective and detective
+
+competence and compete
+
+reference and refer and referee
+
+spectacle and spect and spectrum
+
+progressive and progress
+
+fragile and delicate and fragrant
+
+corps and corpse
+
+coup and coupon and court
+
+census and consensus 
+
+revolve and resolve
+
+trait
+
+exposition and composition
+
+exploit
+
+deduct and deduce
+
+revel and repel
+
+present and represent
+
+tuck and tug and tack
+
+rotary and revolve
+
+bureaucracy
+
+conflict and inflict
+
+cast
+
+specification
+
+queer and quench
+
+quench and extinguish
+
+crumble and tumble
+
+intricate and intrinsic
+
+contradiction
+
+surge and soar
+
+surpass and overpass
+
+innovation and reform
+
+intimate  and timid
+
+elite and elicit
+
+spiral and spine
+
+fossil and gossip
+
+courtesy and court
+
+rebel and repel
+
+pertinently
+
+transport
+
+consent
+
+embryo
+
+rating
+
+scrap
+
+relieve
+
+critic
+
+ford
+
+dean and decent
+
+
+
+#### 扇贝
 
 ### 第八天11.24
 
