--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -2801,7 +2801,7 @@ surge and soar
 
 surpass and overpass
 
-innovation and reform
+innovation and reform and revolution
 
 intimate  and timid
 
@@ -2835,16 +2835,274 @@ ford
 
 dean and decent
 
-
-
 #### 扇贝
+
+consult consult your lawyer
+
+fertilizer and manure
+
+release
+
+council and committee
+
+innovation and reform and revolution
+
+inspiration
+
+henceforth
+
+shear  shear sheep
+
+vigorous and rigorous
+
+tempo
+
+graphics
+
+eligible 
+
+overthrow the decision was overthrown
+
+convert convert the energy of sunlight into electric energy
+
+discount  we can't discount the possibility of strikes
+
+elevate elevate your mind
+
+setback
+
+caution caution you against the danger
+
+verge the verge of tears
+
+electronic
+
+orthodox orthodox medical treatment instead of opertion
+
+manifestation a manifestation of  the economic crisis
+
+scorn scorn on my suggestions
+
+sour a sour flavour
+
+patriot the noble patriot
+
+slash 
+
+lash lash the horse
+
+firm and film
+
+fracture the company was fractured into several small groups
+
+locality  People in this locality
+
+bang banging the table with his spoon
+
+bust bust my cellphone .  boom-or-bust Texas economy
+
+displace and replace
+
+irony a hint of irony
+
+confinement out of confinement
+
+downplay downplay the crisis
+
+desirable desirable place
+
+contend contend with great difficulties . contend that hunting is not practical
+
+consent
+
+pumpkin and napkin
+
+conversion
+
+fringe the fringe of society. the verge of tears
+
+contemplate contemplated retirement
+
+persist the divide persists
+
+commonwealth the British Commonwealth
+
+graphic poor graphic quality
+
+cardinal  the cardinal principle
+
+community the local community
+
+paradox
+
+tuition the university tuition
+
+groan groan with pain
+
+displomat a French diplomat
+
+sturdy sturdy enough to withstand rough terrain
+
+mammal
+
+initiative We have the initiative; we intend to keep it
+
+initial
+
+crash the financial crash in 1929  ruined international trade. prices crashed
+
+ultraviolet ultraviolet rays
+
+juggle one guy was juggling with five flaming torches
+
+booklet the booklet on drug abuse
+
+questionnaires some questionnaires for collecting data
+
+stumble stumble and spill the milk all over the floor
+
+legacy a big legacy
+
+peg hang it on the peg
+
+couch sleep on the couch
+
+spotlight  help spotlight issues that merit caution
+
+endurance exhibited great powers of endurance
+
+ spoil spoil their children
+
+rein pull on both reins to slow a horse
+
+stun the world are stunned by the news of the disaster on the island
+
+kidney kidney transplants
+
+slogan advertising slogan
+
+condense Vapor condense into water
+
+infection the risk of infection
+
+formidable the two players make a formidable combination
+
+jury a member of the jury
+
+unify unify the divided country
+
+insanity not guilty because his insanity
+
+overt overt race discrimination
+
+threaten threatened with violence
+
+intermittent intermittent rain
+
+radical radical idea .  the thesis led to a radical reshaping of their policies
+
+midst the midst of an economic crisis
+
+racial racial equality
+
+nourish
+
+theft
+
+converse the converse applies . conversing with strangers
+
+oriental oriental art
+
+humble 
+
+outrage
+
+twinkle stars twinkle
+
+distinguish and extinguish
+
+reconcile reconcile two different points
+
+shuttle fly yo Boston on the shuttle
+
+vegetation green vegetation
+
+compile compile a list of members
+
+dreadful it's dreadful the way they treat their staff
+
+pastry delicious pastry
+
+wage weekly wage
+
+combustion combustion with the people slowly built up before the revolution
+
+formula the formula is used to calculate
+
+pose the task pose no problems
+
+neatly neatly packaged
+
+thigh right thigh
+
+monopoly a male monopoly
+
+initiate initiate a programme of economic reform
+
+conservative == conventional
+
+legitimate a legitimate birth
+
+legacy
+
+flutter fluttering its wings
+
+impulse have a  impulse to stand up and sing
+
+slump slump by 20% .
+
+slump and 
+
+rigor and vigor
+
+impartial impartial judge
+
+impart and impartial
+
+incur incurred the anger of the audience
+
+menace are menaces to world peace
+
+exempt are exempt from military service
+
+exempt and exemplify
+
+chip silicon chip
+
+cabinet the cabinet minister
+
+liner a luxury cruise liner
+
+interim a interim arrangement . and transient
+
+petty petty crime .and trivial
+
+cable Cable television
+
+
+
+
+
+
+
+ 
 
 ### 第八天11.24
 
-### 第九天
+### 第九天11.25
 
 ### 第十天11.26
 
-### 第十一天
+### 第十一天11.27
 
 ### 第十二天11.28
