--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -3095,9 +3095,85 @@ cable Cable television
 
 
 
+
+
+
+
  
 
 ### 第八天11.24
+
+#### 复习
+
+combustion combustion with the people slowly built up before the 
+
+revolution
+
+intermittent intermittent rain
+
+interim a interim arrangement 
+
+interim and tentative and transient
+
+bust bust my cellphone .  boom-or-bust Texas economy
+
+
+
+banquet a grand banquet
+
+peg 
+
+inspiration 
+
+lash lash the horse
+
+flatter felt flattered to be invited to  the conference
+
+petty petty crime
+
+metallic harsh and metallic
+
+ford a ford of the river
+
+rein pull both reins to slow a horse
+
+ ultraviolet ultraviolet rays
+
+bound bound to success
+
+vigorous vigorous exercise
+
+vicious a vicious temper
+
+migrant migrant from rural
+
+corps
+
+chapel
+
+specialist and specification
+
+specification built exactly to our specification
+
+fracture the company was fractured into several smaller groups
+
+formulate formulate a answer
+
+formulate and formula
+
+#### 扇贝
+
+tap tap into constructive emotions
+
+venture venture on a long journey
+
+battle battle with a knee injury
+
+inaugurate inaugurated as President 
+
+
+
+
 
 ### 第九天11.25
 
