--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -3171,7 +3171,283 @@ battle battle with a knee injury
 
 inaugurate inaugurated as President 
 
+commercial a commercial ship
 
+suborbital the laws of ballistics limit the suborbital vehicle
+
+corresponding the corresponding period last year
+
+bandage twist the bandage round her knee
+
+trolley put our luggage on a trolley
+
+offset raise the price to offset the increased cost of materials
+
+subjective opinion is bound to be subjective
+
+resume the meeting is expected to resume early tomorrow
+
+consecutive after 17 consecutive wins
+
+ethnic from different ethnic groups
+
+pertinent pertinent comments on the scheme
+
+resign I resigned last week
+
+revenue tax revenue 
+
+underlying underlying causes of poverty
+
+sociable the friendly and sociable couple
+
+swamp stuck in the swamp
+
+irrigation irrigation project
+
+dispose
+
+offense cause offense to some people. No offense . I meant no offense
+
+controversy Controversy exists
+
+tissue muscle tissue.  facial tissue
+
+eliminate three suspects have been eliminated
+
+pudding sticky pudding
+
+dealer he's a dealer in second-hand cars
+
+bracket their information is included in brackets
+
+excess excess of stress 
+
+excel excelled in foreign languages
+
+fuse fused into a single organization
+
+bronze
+
+circus allow him to go to the circus
+
+silicon silicon chip
+
+susceptible babies are more susceptible to infections
+
+pore the pore of the rock
+
+immune immune system
+
+spontaneous with spontaneous applause
+
+esthetic esthetic value
+
+stern planning sterner measures
+
+thorn hurt by the thorn on the rose
+
+iceberg floating iceberg
+
+solitary a single solitary figure was programming in the classroom
+
+cater cater for his boss
+
+intercity intercity railway
+
+stationary stationary vehicle
+
+stationery and stationary
+
+grip grip the rope . there were other important figures , but Marconi towered over them all in reach ,power ,and influence ,as well as in the grip he had on the popular imagination of his time  .  popular imagination 大众想象力
+
+pact non-aggression pact
+
+dome the dome of that building
+
+specialty a local specialty
+
+stroke suffered a stroke
+
+subsidy government subsidy
+
+investigate investigate problem
+
+suppress the rebellion was brutally suppressed
+
+signify she signify her disagreement
+
+gravitation Particles are attracted to each other by gravitation
+
+durability products are tested for durability
+
+prolong the meeting may be prolonged into the evening
+
+lace a lace handkerchief
+
+chorus join in the chorus
+
+stroll  they went for a stroll along the beach
+
+flank the sun lit up the western flank of the hill
+
+inspirational an inspirational speaker
+
+grim the grim forecast . the grim number
+
+locomotive how many coaches can the locomotive pull
+
+procedure emergency procedure
+
+junction the junction of City Road and the Old Street
+
+stride we strode across the snowy fields
+
+bibliography she provides a detailed bibliography of her thesis
+
+explicitly state explicitly
+
+reign the reign of Queen Victoria lasted more than sixty years
+
+ferry the last ferry sails at 4 p.m.
+
+ego the prize boosted my ego
+
+whirl
+
+controversial controversial issue
+
+invaluable invaluable experience
+
+pharmacy all-night pharmacy
+
+relevant enviromental protection and other relevant issues
+
+biography
+
+sober sober enough to drive us home
+
+pound a pound coin
+
+discreet a discreet way to handle the problem
+
+prototype the prototype of the role in that film
+
+remainder the remainder stayed outside
+
+gloomy become a gloomy man
+
+masculine full of masculine charm
+
+supersonic at supersonic speeds
+
+reunion a family reunion on a monthly basis
+
+occupancy Average hotel occupancy is as low as 30 percent in the off season
+
+cluster the men clustered together round the fire
+
+belly the belly of a ship. this belly fat
+
+compactness the version balances compactness and simplicity
+
+remain
+
+lofty lofty ideals
+
+frantic your mother has been frantic with worry
+
+wedge he hammered the wedge into the crack 
+
+cereal a bowl of cereal
+
+turbulent a turbulent political career
+
+lease the lease runs out next year
+
+conscious the detective was very conscious of what was going on
+
+register they are registered as married
+
+surplus Wheat was in surplus that year
+
+stimulus the government resort to tax deductions as stimulus which the slow economy needed
+
+scrub scrub himself all over
+
+overhear I overheard a conversation between two boys
+
+hound they were hounded day and night
+
+ethical high ethical standards
+
+denial a denial of the untrue story
+
+reckon I reckon that I'm going to get that job
+
+sort this sort of probem
+
+literal literal sense
+
+patent the patent runs out in three years
+
+dread I'm  dreading it
+
+prey Owls prey on mice
+
+property  the computer is the company's property
+
+pedestrian pedestrian street
+
+planet the planet Earth
+
+malnutrition severe malnutrition
+
+gorgeous the clouds were gorgeous
+
+smog reduce smog caused by traffic fumes
+
+clinical clinical trials
+
+smuggle smuggle an animal into Britain
+
+meadow in the meadow by the campus after the exam
+
+solicitor the solicitor asked that his client be allowed to make a phone call
+
+vicinity the vicinity of 30 or 40
+
+carcass the carcass of the deer
+
+magistrate the magistrate refused his bail
+
+haven a haven of tranquillity
+
+plateau reached a plateau
+
+heave heave the trunk down the stairs
+
+circumstance
+
+upright stand upright
+
+constant a constant stream of visitors
+
+feast a wedding feast
+
+chronic  a chronic unemployment
+
+detection detection of the disease
+
+draft the first draft of my speech
+
+toll the death  toll
+
+bachelor remaining a bachelor
+
+mall meet at the mall and go shopping
+
+hinge oil the hinge
 
 
 
