--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -3259,7 +3259,7 @@ stationary stationary vehicle
 
 stationery and stationary
 
-grip grip the rope . there were other important figures , but Marconi towered over them all in reach ,power ,and influence ,as well as in the grip he had on the popular imagination of his time  .  popular imagination 大众想象力
+grip grip the rope . there were other important figures , but Marconi towered over them all in reach ,power ,and influence ,as well as in the grip he had on the popular imagination of his time  .  popular imagination 大众想象力 grip掌握
 
 pact non-aggression pact
 
@@ -3321,7 +3321,7 @@ invaluable invaluable experience
 
 pharmacy all-night pharmacy
 
-relevant enviromental protection and other relevant issues
+relevant environment protection and other relevant issues
 
 biography
 
@@ -3385,7 +3385,7 @@ denial a denial of the untrue story
 
 reckon I reckon that I'm going to get that job
 
-sort this sort of probem
+sort this sort of problem
 
 literal literal sense
 
